--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,10 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/6d5d1df680.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
   </head>
   <body></body>
