--- a/index.html
+++ b/index.html
@@ -79,5 +79,118 @@
         healthy here
       </h2>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card recepies">
+            <img
+              src="/img/homepage/meal1.png"
+              class="card-img-top img-fluid"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text">Wet Vegetable Spring Rolls</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card recepies">
+            <img
+              src="/img/homepage/meal2.png"
+              class="card-img-top img-fluid"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text">Wet Vegetable Spring Rolls</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card recepies">
+            <img
+              src="/img/homepage/meal3.png"
+              class="card-img-top img-fluid"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text">Wet Vegetable Spring Rolls</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card recepies">
+            <img
+              src="/img/homepage/meal4.png"
+              class="card-img-top img-fluid"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text">Wet Vegetable Spring Rolls</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card recepies">
+            <img
+              src="/img/homepage/meal5.png"
+              class="card-img-top img-fluid"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text">Wet Vegetable Spring Rolls</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card recepies">
+            <img
+              src="/img/homepage/meal6.png"
+              class="card-img-top img-fluid"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text">Wet Vegetable Spring Rolls</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card recepies">
+            <img
+              src="/img/homepage/meal7.png"
+              class="card-img-top img-fluid"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text">Wet Vegetable Spring Rolls</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card recepies">
+            <img
+              src="/img/homepage/meal8.png"
+              class="card-img-top img-fluid"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text">Wet Vegetable Spring Rolls</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="d-flex justify-content-between">
+        <div>
+          <img src="/img/homepage/She-Codes.png" alt="logo" width="50%" />
+        </div>
+        <div>
+          <i class="fa-brands fa-facebook-square p-2"></i>
+          <i class="fa-brands fa-instagram p-2"></i>
+          <i class="fa-brands fa-linkedin p-2"></i>
+        </div>
+        <div>© 2021 SheCodes All rights reserved.</div>
+      </div>
+    </footer>
   </body>
 </html>
