Made homepage responsive

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             src="/img/homepage/She-Codes.png "
             width="50%"
             alt="logo"
-            class="img-fluid"
+            class="img-fluid logo"
         /></a>
         <button
           class="navbar-toggler"
@@ -181,8 +181,13 @@
     </div>
     <footer>
       <div class="d-flex justify-content-between">
-        <div>
-          <img src="/img/homepage/She-Codes.png" alt="logo" width="50%" />
+        <div class="footer-logo">
+          <img
+            src="/img/homepage/She-Codes.png"
+            alt="logo"
+            width="50%"
+            id="footer-logo"
+          />
         </div>
         <div>
           <i class="fa-brands fa-facebook-square p-2"></i>
