Added links to other html pages

--- a/about.html
+++ b/about.html
@@ -28,5 +28,71 @@
     ></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><img
+            src="/img/homepage/She-Codes.png "
+            width="50%"
+            alt="logo"
+            class="img-fluid logo"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                id="home"
+                aria-current="page"
+                href="/index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/recipe.html">Recipe</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <footer>
+      <div class="d-flex justify-content-between">
+        <div class="footer-logo">
+          <img
+            src="/img/homepage/She-Codes.png"
+            alt="logo"
+            width="50%"
+            id="footer-logo"
+          />
+        </div>
+        <div>
+          <i class="fa-brands fa-facebook-square p-2"></i>
+          <i class="fa-brands fa-instagram p-2"></i>
+          <i class="fa-brands fa-linkedin p-2"></i>
+        </div>
+        <div>© 2021 SheCodes All rights reserved.</div>
+      </div>
+    </footer>
+  </body>
 </html>
