--- a/index.html
+++ b/index.html
@@ -55,18 +55,22 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" id="home" aria-current="page" href="#"
+              <a
+                class="nav-link active"
+                id="home"
+                aria-current="page"
+                href="/index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">About</a>
+              <a class="nav-link active" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Recipe</a>
+              <a class="nav-link active" href="/recipe.html">Recipe</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Contact</a>
+              <a class="nav-link active" href="/contact.html">Contact</a>
             </li>
           </ul>
         </div>
