Made active link in navbar

--- a/about.html
+++ b/about.html
@@ -64,7 +64,9 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about.html">About</a>
+              <a class="nav-link active" href="/about.html" id="active-link"
+                >About</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/recipe.html">Recipe</a>
