--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
               <a class="nav-link active" href="/recipe.html">Recipe</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/contact.html">Contact</a>
+              <a class="nav-link active" href="/contact.html" id="active-link">Contact</a>
             </li>
           </ul>
         </div>
