--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <li class="nav-item">
               <a
                 class="nav-link active"
-                id="home"
+                id="active-link"
                 aria-current="page"
                 href="/index.html"
                 >Home</a
