--- a/recipe.html
+++ b/recipe.html
@@ -67,7 +67,7 @@
               <a class="nav-link active" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/recipe.html">Recipe</a>
+              <a class="nav-link active" href="/recipe.html" id="active-link">Recipe</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/contact.html">Contact</a>
