Changed recepies names

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               alt="..."
             />
             <div class="card-body">
-              <p class="card-text">Wet Vegetable Spring Rolls</p>
+              <p class="card-text">Panna Cotta with Fruits</p>
             </div>
           </div>
         </div>
@@ -105,7 +105,7 @@
               alt="..."
             />
             <div class="card-body">
-              <p class="card-text">Wet Vegetable Spring Rolls</p>
+              <p class="card-text">Flank Steak with Roasted Vegetables</p>
             </div>
           </div>
         </div>
@@ -117,7 +117,7 @@
               alt="..."
             />
             <div class="card-body">
-              <p class="card-text">Wet Vegetable Spring Rolls</p>
+              <p class="card-text">Spinach Hummus with Nuts and Flowers</p>
             </div>
           </div>
         </div>
@@ -129,7 +129,7 @@
               alt="..."
             />
             <div class="card-body">
-              <p class="card-text">Wet Vegetable Spring Rolls</p>
+              <p class="card-text">Pork Meatballs with Arugla</p>
             </div>
           </div>
         </div>
@@ -141,7 +141,7 @@
               alt="..."
             />
             <div class="card-body">
-              <p class="card-text">Wet Vegetable Spring Rolls</p>
+              <p class="card-text">Baked Salmon with Vegetables</p>
             </div>
           </div>
         </div>
@@ -153,7 +153,7 @@
               alt="..."
             />
             <div class="card-body">
-              <p class="card-text">Wet Vegetable Spring Rolls</p>
+              <p class="card-text">Vegetable Parmesan Pasta</p>
             </div>
           </div>
         </div>
@@ -165,7 +165,7 @@
               alt="..."
             />
             <div class="card-body">
-              <p class="card-text">Wet Vegetable Spring Rolls</p>
+              <p class="card-text">Fluffiest Blueberry Pancakes</p>
             </div>
           </div>
         </div>
@@ -177,7 +177,7 @@
               alt="..."
             />
             <div class="card-body">
-              <p class="card-text">Wet Vegetable Spring Rolls</p>
+              <p class="card-text">Citrus Fruit Salad</p>
             </div>
           </div>
         </div>
