Made contact-page

--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,28 @@
         </div>
       </div>
     </nav>
+    <h1 class="text-center mb-5 pb-5">Contact Us</h1>
+    <div class="container about-section">
+      <div class="row">
+        <div class="col-sm-4"> <img src="/img/contact/shelley.png" alt="shelley" class="img-fluid"/> </div>
+        <div class="col-sm-8"> 
+          <ul>
+            <li> 
+              <div class="contact-recources">Address</div>
+              <h2><i class="fa-solid fa-location-dot"></i> 021 Hollywood Boulevard, Los Angeles</h2>
+            </li>
+            <li>
+              <div class="contact-recources">Email</div>
+              <h2><i class="fa-solid fa-envelope"></i> info@shecodes.io</h2>
+            </li>
+            <li>
+              <div class="contact-recources">Phone</div>
+              <h2><i class="fa-solid fa-phone"></i> 021 3456 789</h2>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <footer>
       <div class="d-flex justify-content-between">
         <div class="footer-logo">
