Started about-page

--- a/about.html
+++ b/about.html
@@ -78,6 +78,76 @@
         </div>
       </div>
     </nav>
+    <h1>About Me</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="/img/contact/shelley.png" alt="shelley" class="img-fluid" />
+        </div>
+        <div class="col-sm-6">
+          <h2>Shelley White</h2>
+          <p>
+            Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa
+            sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut
+            amet diam suscipit pretium massa, sollicitudin in risus in.
+            Sagittis.
+          </p>
+        </div>
+      </div>
+    </div>
+    <h2 class="text-center">Favorite recepies</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card" style="width: 18rem">
+            <img
+              src="/img/about/1.png"
+              class="card-img-top"
+              alt="..."
+              class="img-fluid"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card" style="width: 18rem">
+            <img
+              src="/img/about/2.png"
+              class="card-img-top"
+              alt="..."
+              class="img-fluid"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card" style="width: 18rem">
+            <img
+              src="/img/about/3.png"
+              class="card-img-top"
+              alt="..."
+              class="img-fluid"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer>
       <div class="d-flex justify-content-between">
         <div class="footer-logo">
