--- a/contact.html
+++ b/contact.html
@@ -76,8 +76,8 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center mb-5 pb-5">Contact Us</h1>
-    <div class="container about-section">
+    <h1 class=" mb-5 pb-5">Contact Us</h1>
+    <div class="container contact-section">
       <div class="row">
         <div class="col-sm-4"> <img src="/img/contact/shelley.png" alt="shelley" class="img-fluid"/> </div>
         <div class="col-sm-8"> 
