--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
     </nav>
     <div class="hero">
-      <h1 class="homepage">Recipe Collection</h1>
+      <h1 id="h1-homepage">Recipe Collection</h1>
       <h2>
         Find a variety of inspiring recipes that are easy, delicious, and
         healthy here
