Made recipes-page

--- a/recipe.html
+++ b/recipe.html
@@ -76,6 +76,100 @@
         </div>
       </div>
     </nav>
+    <h1 class="mb-4 pb-3 ">Recipe Collection</h1>
+    <div class="container recipe-content">
+      <div class="row">
+        <div class="col-sm-12 ">
+          <img src="/img/homepage/meal1.png" alt="" class="img-fluid " >
+          <h2 class="pt-4 pb-4">Panna Cotta with Fruits</h2>
+        </div>
+        <div class="col-sm-6">
+          <h3 class="pb-4 ingredient">Ingredient</h3>
+          <ul class="p-0">
+            <li class="ingredient">350g spaghetti or linguine</li>
+            <li class="ingredient">140g pack diced pancetta, or smoked streaky bacon</li>
+            <li class="ingredient">2 stp olive oil</li>
+            <li class="ingredient">1 garlic clove, crushed</li>
+            <li class="ingredient">1 egg, plus 4 yolks</li>
+            <li class="ingredient">50g parmesan, grated</li>
+          </ul>
+        </div>
+        <div class="col-sm-6 ps-4">
+          <h3 class="pb-4 ingredient">Method</h3>
+          <div class="step">Step 1</div>
+          <div>
+            Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut.
+          </div>
+          <br />
+          <div class="step">Step 2</div>
+          <div>
+            Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut massa sollicitudin in risus.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container recipe-content">
+      <div class="row">
+        <div class="col-sm-12 ">
+          <img src="/img/homepage/meal4.png" alt="" class="img-fluid " >
+          <h2 class="pt-4 pb-4">Pork Meatballs with Arugla</h2>
+        </div>
+        <div class="col-sm-6">
+          <h3 class="pb-4 ingredient">Ingredient</h3>
+          <ul class="p-0">
+            <li class="ingredient">350g spaghetti or linguine</li>
+            <li class="ingredient">140g pack diced pancetta, or smoked streaky bacon</li>
+            <li class="ingredient">2 stp olive oil</li>
+            <li class="ingredient">1 garlic clove, crushed</li>
+            <li class="ingredient">1 egg, plus 4 yolks</li>
+            <li class="ingredient">50g parmesan, grated</li>
+          </ul>
+        </div>
+        <div class="col-sm-6 ps-4">
+          <h3 class="pb-4 ingredient">Method</h3>
+          <div class="step">Step 1</div>
+          <div>
+            Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut.
+          </div>
+          <br />
+          <div class="step">Step 2</div>
+          <div>
+            Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut massa sollicitudin in risus.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container recipe-content">
+      <div class="row">
+        <div class="col-sm-12 ">
+          <img src="/img/homepage/meal9.png" alt="" class="img-fluid " >
+          <h2 class="pt-4 pb-4">Vegetable Assorti</h2>
+        </div>
+        <div class="col-sm-6">
+          <h3 class="pb-4 ingredient">Ingredient</h3>
+          <ul class="p-0">
+            <li class="ingredient">350g spaghetti or linguine</li>
+            <li class="ingredient">140g pack diced pancetta, or smoked streaky bacon</li>
+            <li class="ingredient">2 stp olive oil</li>
+            <li class="ingredient">1 garlic clove, crushed</li>
+            <li class="ingredient">1 egg, plus 4 yolks</li>
+            <li class="ingredient">50g parmesan, grated</li>
+          </ul>
+        </div>
+        <div class="col-sm-6 ps-4">
+          <h3 class="pb-4 ingredient">Method</h3>
+          <div class="step">Step 1</div>
+          <div>
+            Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut.
+          </div>
+          <br />
+          <div class="step">Step 2</div>
+          <div>
+            Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut massa sollicitudin in risus.
+          </div>
+        </div>
+      </div>
+    </div>
     <footer>
       <div class="d-flex justify-content-between">
         <div class="footer-logo">
