--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
       </div>
     </nav>
     <div class="hero">
-      <h1 id="h1-homepage">Recipe Collection</h1>
-      <h2>
+      <h1>Recipe Collection</h1>
+      <h3>
         Find a variety of inspiring recipes that are easy, delicious, and
         healthy here
-      </h2>
+      </h3>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <div class="card recepies">
+          <div class="card card-recipes">
             <img
               src="/img/homepage/meal1.png"
               class="card-img-top img-fluid"
@@ -98,7 +98,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card recepies">
+          <div class="card card-recipes">
             <img
               src="/img/homepage/meal2.png"
               class="card-img-top img-fluid"
@@ -110,7 +110,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card recepies">
+          <div class="card card-recipes">
             <img
               src="/img/homepage/meal3.png"
               class="card-img-top img-fluid"
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card recepies">
+          <div class="card card-recipes">
             <img
               src="/img/homepage/meal4.png"
               class="card-img-top img-fluid"
@@ -134,7 +134,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card recepies">
+          <div class="card card-recipes">
             <img
               src="/img/homepage/meal5.png"
               class="card-img-top img-fluid"
@@ -146,7 +146,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card recepies">
+          <div class="card card-recipes">
             <img
               src="/img/homepage/meal6.png"
               class="card-img-top img-fluid"
@@ -158,7 +158,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card recepies">
+          <div class="card card-recipes">
             <img
               src="/img/homepage/meal7.png"
               class="card-img-top img-fluid"
@@ -170,7 +170,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card recepies">
+          <div class="card card-recipes">
             <img
               src="/img/homepage/meal8.png"
               class="card-img-top img-fluid"
