Made about-page

--- a/about.html
+++ b/about.html
@@ -78,44 +78,45 @@
         </div>
       </div>
     </nav>
-    <h1>About Me</h1>
-    <div class="container">
+    <h1 class="mb-4 pb-3">About Me</h1>
+    <div class="container ps-5">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-4">
           <img src="/img/contact/shelley.png" alt="shelley" class="img-fluid" />
         </div>
-        <div class="col-sm-6">
-          <h3>Shelley White</h3>
-          <p>
+        <div class="col-sm-8">
+          <h2>Shelley White</h2>
+          <div class="recipe-content ps-0 pt-4">
             Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa
             sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut
             amet diam suscipit pretium massa, sollicitudin in risus in.
             Sagittis.
-          </p>
+          </div>
         </div>
       </div>
     </div>
-    <h3 class="text-center">Favorite recepies</h3>
+    <h2 class="text-center pt-5 mt-4 ">Favorite recepies</h2>
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
-          <div class="card" style="width: 18rem">
+        <div class="col-md-4 d-flex justify-content-center p-3">
+          <div class="card" >
             <img
               src="/img/about/1.png"
               class="card-img-top"
               alt="..."
               class="img-fluid"
             />
-            <div class="card-body">
+            <div class="card-body ">
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                <h3>Wet Vegetable Spring Rolls</h3>
+                Id ac lorem maecenas rhoncus lobortis turpis morbi. 
+                Id ut lobortis consectetur volutpat commodo mi suspendisse odio.
               </p>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card" style="width: 18rem">
+        <div class="col-md-4 d-flex justify-content-center p-3">
+          <div class="card" >
             <img
               src="/img/about/2.png"
               class="card-img-top"
@@ -124,14 +125,15 @@
             />
             <div class="card-body">
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                <h3>Wet Vegetable Spring Rolls</h3>
+                Id ac lorem maecenas rhoncus lobortis turpis morbi. 
+                Id ut lobortis consectetur volutpat commodo mi suspendisse odio.
               </p>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card" style="width: 18rem">
+        <div class="col-md-4 d-flex justify-content-center p-3">
+          <div class="card" >
             <img
               src="/img/about/3.png"
               class="card-img-top"
@@ -140,8 +142,9 @@
             />
             <div class="card-body">
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                <h3>Wet Vegetable Spring Rolls</h3>
+                Id ac lorem maecenas rhoncus lobortis turpis morbi. 
+                Id ut lobortis consectetur volutpat commodo mi suspendisse odio.
               </p>
             </div>
           </div>
