--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <div class="card card-recipes">
+          <div class="card mt-4">
             <img
               src="/img/homepage/meal1.png"
               class="card-img-top img-fluid"
@@ -98,7 +98,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card card-recipes">
+          <div class="card mt-4">
             <img
               src="/img/homepage/meal2.png"
               class="card-img-top img-fluid"
@@ -110,7 +110,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card card-recipes">
+          <div class="card mt-4">
             <img
               src="/img/homepage/meal3.png"
               class="card-img-top img-fluid"
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card card-recipes">
+          <div class="card mt-4">
             <img
               src="/img/homepage/meal4.png"
               class="card-img-top img-fluid"
@@ -134,7 +134,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card card-recipes">
+          <div class="card mt-4">
             <img
               src="/img/homepage/meal5.png"
               class="card-img-top img-fluid"
@@ -146,7 +146,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card card-recipes">
+          <div class="card mt-4">
             <img
               src="/img/homepage/meal6.png"
               class="card-img-top img-fluid"
@@ -158,7 +158,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card card-recipes">
+          <div class="card mt-4">
             <img
               src="/img/homepage/meal7.png"
               class="card-img-top img-fluid"
@@ -170,7 +170,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card card-recipes">
+          <div class="card mt-4">
             <img
               src="/img/homepage/meal8.png"
               class="card-img-top img-fluid"
