--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Find a variety of inspiring recipes that are easy, delicious, and healthy here">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +27,7 @@
       src="https://kit.fontawesome.com/6d5d1df680.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Recipe Collection | About Us</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light">
@@ -92,6 +93,12 @@
             amet diam suscipit pretium massa, sollicitudin in risus in.
             Sagittis.
           </div>
+          <h3 class="p-2">Follow me: 
+            <a href="http://facebook.com"><i class="fa-brands fa-facebook-square p-2"></i></a>
+            <a href="http://instagram.com"><i class="fa-brands fa-instagram p-2"></i></a>
+            <a href="http://"><i class="fa-brands fa-linkedin p-2"></i></a>
+            
+          </h3>
         </div>
       </div>
     </div>
@@ -166,7 +173,7 @@
           <i class="fa-brands fa-instagram p-2"></i>
           <i class="fa-brands fa-linkedin p-2"></i>
         </div>
-        <div>© 2021 SheCodes All rights reserved.</div>
+        <div class="d-none d-md-flex">© 2021 SheCodes All rights reserved.</div>
       </div>
     </footer>
   </body>
