--- a/recipe.html
+++ b/recipe.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Find a variety of inspiring recipes that are easy, delicious, and healthy here">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +27,7 @@
       src="https://kit.fontawesome.com/6d5d1df680.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Recipe Collection | Recipes</title>
   </head>
   <body>
      <nav class="navbar navbar-expand-lg bg-light">
@@ -185,7 +186,7 @@
           <i class="fa-brands fa-instagram p-2"></i>
           <i class="fa-brands fa-linkedin p-2"></i>
         </div>
-        <div>© 2021 SheCodes All rights reserved.</div>
+        <div class="d-none d-md-flex">© 2021 SheCodes All rights reserved.</div>
       </div>
     
   </body>
