Added GitHub link

--- a/about.html
+++ b/about.html
@@ -97,7 +97,9 @@
             <a href="http://facebook.com"><i class="fa-brands fa-facebook-square p-2"></i></a>
             <a href="http://instagram.com"><i class="fa-brands fa-instagram p-2"></i></a>
             <a href="http://"><i class="fa-brands fa-linkedin p-2"></i></a>
-            
+          </h3>
+          <h3 class="p-2"> Open-source code by Marta Pauk
+            <a href="https://github.com/marta0220/culinary-project"><i class="fa-brands fa-github"></i></a>
           </h3>
         </div>
       </div>
